--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.12.3",
+    "lodash": "^4.17.11",
     "swagger-express-mw": "^0.1.0"
   },
   "devDependencies": {
