--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.12.3",
     "form-data": "^2.3.2",
     "fs": "^0.0.1-security",
+    "ipfs-api": "^25.0.0",
     "lodash": "^4.17.11",
     "swagger-express-mw": "^0.1.0",
     "web3": "^0.20.6"
