--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.12.3",
+    "file-type": "^10.1.0",
     "form-data": "^2.3.2",
     "fs": "^0.0.1-security",
     "ipfs-api": "^25.0.0",
