--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
-    "axios": "^0.18.0",
+    "dotenv": "^6.1.0",
     "express": "^4.12.3",
     "file-type": "^10.1.0",
-    "form-data": "^2.3.2",
-    "fs": "^0.0.1-security",
     "ipfs-api": "^25.0.0",
     "lodash": "^4.17.11",
     "swagger-express-mw": "^0.1.0",
+    "truffle-hdwallet-provider": "^0.0.6",
     "web3": "^0.20.6"
   },
   "devDependencies": {
