--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "license": "",
   "main": "app.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "dotenv": "^6.1.0",
+    "ethereumjs-tx": "^1.3.7",
     "express": "^4.12.3",
     "file-type": "^10.1.0",
     "ipfs-api": "^25.0.0",
     "lodash": "^4.17.11",
     "swagger-express-mw": "^0.1.0",
     "truffle-hdwallet-provider": "^0.0.6",
-    "web3": "^0.20.6"
+    "web3": "^1.0.0-beta.36"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
