--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "app.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.12.3",
