--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: "3"
 services:
   api:
     build: .
+    container_name: api-toolkit
+    volumes:
+      - ./ssl-api/:/etc/ssl/:ro
     ports:
-      - "8085:10010"
+    - "10443:10443"
     env_file:
-      - .env
+    - .env
