--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "ethereumjs-tx": "^1.3.7",
     "express": "^4.12.3",
     "file-type": "^10.1.0",
+    "fs": "^0.0.1-security",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
     "ipfs-api": "^25.0.0",
     "swagger-express-mw": "^0.1.0",
     "truffle-hdwallet-provider": "^0.0.6",
