Changes on project to allow parsing large files
        I've modified the API in order to allow accepting files up to 10
        MB large.

        Reported-by: Anni Piragauta

--- a/config/default.yaml
+++ b/config/default.yaml
@@ -21,11 +21,17 @@ swagger:
       name: swagger_validator
       validateResponse: true
 
+    swagger_params_parser:
+      name: swagger_params_parser
+      jsonOptions:
+        limit: '10mb'
+
     # pipe for all swagger-node controllers
     swagger_controllers:
       - onError: json_error_handler
       - cors
       - swagger_security
+      - swagger_params_parser
       - _swagger_validate
       - express_compatibility
       - _router
